--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -1,6 +1,6 @@
 .body{
     background-color: black;
-    background-image: url("/src/assets/mulan1.jpg");
+    background-image: url("/src/assets/mulan2.jpg");
 	background-size: 100%;
 	background-repeat: no-repeat;
 	position: sticky;
@@ -8,6 +8,9 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    border-color: black;
+    border-width: 5px;
+    border-style: double;
     
 }
 
@@ -30,6 +33,7 @@
     font-size: 8em;
     font-weight: bold;
     padding-right: 2rem;
+   padding-bottom: 50rem;
     text-align: center;
     text-shadow: 1px 1px 2px rgb(196, 132, 132)
     
@@ -44,7 +48,8 @@
         width: 100%;
         font-size: 0.1em;
         padding-bottom: 2rem;
-        text-align: center; 
+        text-align: center;
+        padding-bottom: 50rem; 
     
     }
     .parrafo{
@@ -67,6 +72,7 @@
         font-size: 2em;
         padding-bottom: 0.5rem;
         text-align: center; 
+        padding-bottom: 50rem; 
     
     
     }
@@ -79,5 +85,6 @@
         font-size: 2em;
         padding-bottom: 0.5rem;
         text-align: center;
+        padding-bottom: 20rem; 
     }
 }
