--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -1,34 +1,39 @@
 .body{
     background-color: black;
-    background-image: url("/src/assets/mulan2.jpg");
+    background-image: url("/src/assets/fondo.jpg");
 	background-size: 100%;
 	background-repeat: no-repeat;
-	position: sticky;
-    justify-content: center;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
     border-color: black;
     border-width: 5px;
     border-style: double;
+    display: flex;
+    justify-content: center;
+    align-self: auto;
     
 }
 
+.mulan22{
+    width: 50%;
+    padding-top: 3rem;
+}
+.cuadro1{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
 .parrafo{
     display: flex;
     width: 100%;
-    padding-top: 2em;
-    padding-left: 50%;
+    padding-top: 3rem;
     font-size: 1.8rem;
-    text-align: center;
     text-shadow: 1px 1px 2px rgb(196, 132, 132);
     font-weight: bold;
 }
 .title{
     
     display: flex;
-    width: 100%;
-    padding-left: 50%;
+    width: 50%;
     padding-bottom: 2rem;
     font-size: 8em;
     font-weight: bold;
@@ -55,10 +60,9 @@
     .parrafo{
         display: flex;
         width: 100%;
-        padding-top: 2%;
-        padding-left: 50%;
-        font-size: 0.5em;
-        padding-right: 1rem;
+        padding-top: 3rem;
+        font-size: 1.0em;
+        padding-left: 1rem;
         
     
     }
