--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -1,95 +1,68 @@
-.body{
+.body {
     background-color: black;
     background-image: url("/src/assets/fondo.jpg");
-	background-size: 100%;
-	background-repeat: no-repeat;
-    flex-direction: row;
-    border-color: black;
-    border-width: 5px;
-    border-style: double;
+    background-size: cover;
+    background-repeat: no-repeat;
     display: flex;
-    justify-content: center;
-    align-self: auto;
-    
+    flex-direction: row;
+    align-items: center;
+    border: 5px double black;
+    padding: 2rem;
 }
 
-.mulan22{
-    width: 50%;
-    padding-top: 3rem;
+.mulan22 {
+    max-width: 60%;
+    padding-top: 2rem;
     padding-left: 1rem;
 }
 .cuadro1{
     display: flex;
     flex-direction: column;
-    gap: 2rem;
 }
-.parrafo{
-    display: flex;
+.parrafo {
     width: 100%;
-    padding-top: 3rem;
     font-size: 1.8rem;
+    font-weight: bold;
     text-shadow: 1px 1px 2px rgb(196, 132, 132);
-    font-weight: bold;
-}
-.title{
-    
-    display: flex;
-    width: 50%;
-    padding-bottom: 2rem;
-    font-size: 8em;
-    font-weight: bold;
-    padding-right: 2rem;
-   padding-bottom: 50rem;
+    padding-top: 1rem;
     text-align: center;
-    text-shadow: 1px 1px 2px rgb(196, 132, 132)
-    
-
 }
 
-
-@media screen and (max-width: 480px){
-
-    .title{
-        display: flex;
-        width: 100%;
-        font-size: 0.1em;
-        padding-bottom: 2rem;
-        text-align: center;
-        padding-bottom: 50rem; 
-    
-    }
-    .parrafo{
-        display: flex;
-        width: 100%;
-        padding-top: 3rem;
-        font-size: 1.0em;
-        padding-left: 1rem;
-        
-    
-    }
-
+.title {
+    width: 100%;
+    font-size: 4rem; /* Tamaño de fuente más razonable */
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 1px 1px 2px rgb(196, 132, 132);
+    padding: 1rem;
 }
-@media screen and (max-width: 1412px){
 
-    .title{
-        display: flex;
-        width: 100%;
-        font-size: 2em;
-        padding-bottom: 0.5rem;
-        text-align: center; 
-        padding-bottom: 50rem; 
-    
-    
+/* Media Queries */
+@media screen and (max-width: 1412px) {
+    .title {
+        font-size: 3rem;
+        padding-bottom: 1rem;
+    }
+    .parrafo {
+        font-size: 1.5rem;
     }
 }
-@media screen and (max-width: 968px){
 
-    .title{
-      display: flex;
-        width: 100%;
-        font-size: 2em;
-        padding-bottom: 0.5rem;
-        text-align: center;
-        padding-bottom: 20rem; 
+@media screen and (max-width: 968px) {
+    .title {
+        font-size: 2rem;
+    }
+    .parrafo {
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .title {
+        font-size: 1.5rem;
+    }
+    .parrafo {
+        font-size: 1rem;
+        padding-left: 0.5rem;
     }
 }
