--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -1,9 +1,21 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .body-total{
+    height: 100vh; /* Para que ocupe toda la altura de la ventana */
+    width: 100%; /* Asegura que abarque todo el ancho */
     background-color: black;
     background-image: url("/src/assets/fondo.jpg");
-    background-repeat:no-repeat;
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .body {
@@ -12,7 +24,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center; /* Centra todos los elementos hijos horizontalmente */
+    justify-content: center;
+    padding-right: 2%; /* Centra todos los elementos hijos horizontalmente */
      /* Espacio entre los elementos dentro de .body */
 }
 
