--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -4,6 +4,13 @@ html, body {
     padding: 0;
 }
 
+@font-face {
+    font-family: 'MulanFont';
+    src: url('./fonts/mulan/Mulan.ttf') format('truetype'); /* Ajusta el formato según corresponda (truetype, woff, woff2) */
+    font-weight: normal;
+    font-style: normal;
+}
+
 .body-total{
     height: 100vh; /* Para que ocupe toda la altura de la ventana */
     width: 100%; /* Asegura que abarque todo el ancho */
@@ -67,18 +74,18 @@ html, body {
     text-shadow: 1px 1px 2px rgb(196, 132, 132);
     padding-top: 1rem;
     text-align: center;
-    -webkit-text-stroke-width: 0.2px;
-   -webkit-text-stroke-color: rgb(68, 155, 226);
+    
 }
 
 .title {
+    font-family: 'MulanFont', sans-serif;
     width: 100%;
     font-size: 4rem;
     font-weight: bold;
     text-align: center;
     text-shadow: 1px 1px 2px rgb(196, 132, 132);
-    padding: 1rem;
-    -webkit-text-stroke-width: 0.5px;
+    padding-top: 1em;
+    -webkit-text-stroke-width: 0.1px;
    -webkit-text-stroke-color: rgb(158, 16, 171);
 }
 
