--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -12,15 +12,18 @@ html, body {
 }
 
 .body-total{
-    height: 100vh; /* Para que ocupe toda la altura de la ventana */
-    width: 100%; /* Asegura que abarque todo el ancho */
+    height: 100%; /* Para que ocupe toda la altura de la ventana */
+    width: 100%;
+     /* Asegura que abarque todo el ancho */
     background-color: black;
     background-image: url("/src/assets/fondo.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    
-    flex-direction: row;
+    display: flex;
+    flex-direction: column;
+    flex: wrap;
+   
     align-items: center;
     justify-content: center;
 }
