--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -42,12 +42,15 @@ html, body {
 .mulan22 {
     max-width: 50%;
     padding-top: 2rem;
+    margin-right: -90px;
 }
 .dragon{
+    margin-right: -50px;
     max-width: 33%;
     padding-top: 2rem;
 }
 .grillo{
+    margin-left: -50px;
     max-width: 33%;
     padding-top: 2rem;
 }
@@ -92,7 +95,7 @@ html, body {
     text-align: center;
     text-shadow: 1px 1px 2px rgb(196, 132, 132);
     padding-top: 1em;
-    -webkit-text-stroke-width: 0.1px;
+    -webkit-text-stroke-width: 0.02px;
    -webkit-text-stroke-color: rgb(158, 16, 171);
 }
 
@@ -103,7 +106,7 @@ html, body {
     text-shadow: 1px 1px 2px rgb(196, 132, 132);
     padding-top: 1rem;
     text-align: center;
-    text-decoration: underline wavy rgb(215, 28, 171);
+    text-decoration: underline wavy rgb(234, 106, 204);
     padding-bottom: 1rem;
     
    
