--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -66,6 +66,10 @@ html, body {
     
 }
 
+.division{
+    margin-top: -30px;
+    margin-bottom: -30px;
+}
 .logo{
     margin-top: -50px;
     width: 60%;
@@ -197,7 +201,7 @@ html, body {
 
 @media screen and (max-width: 480px) {
     .title {
-        font-size: 2.5rem;
+        font-size: 2.2rem;
     }
     .parrafo {
         font-size: 1rem;
@@ -214,7 +218,7 @@ html, body {
     .fecha {
         font-weight: bold;
         width: 100%;
-        font-size: 3rem;
+        font-size: 2.5rem;
         text-shadow: 1px 1px 2px rgb(196, 132, 132);
         padding-top: 1rem;
         text-align: center;
