--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -23,7 +23,9 @@ html, body {
     display: flex;
     flex-direction: column;
     flex: wrap;
-   
+    border-color: black;
+    border-width: 5px;
+    border-style: dashed;
     align-items: center;
     justify-content: center;
 }
@@ -218,7 +220,7 @@ html, body {
     .fecha {
         font-weight: bold;
         width: 100%;
-        font-size: 2.5rem;
+        font-size: 1.8rem;
         text-shadow: 1px 1px 2px rgb(196, 132, 132);
         padding-top: 1rem;
         text-align: center;
